// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OptaFootballMatchStats should render correctly 1`] = `
<DocumentFragment>
  <div
    class="sc-bdVaJa eTZphZ"
  >
    <div
      class="sc-htpNat sc-bxivhb hCstwL"
    />
    <div
      class="sc-bwzfXH eSqyJ"
    >
      Placeholder
    </div>
  </div>
</DocumentFragment>
`;

exports[`OptaFootballMatchStats should render correctly 2`] = `
<DocumentFragment>
  <div
    class="sc-bdVaJa eTZphZ"
  >
    <div
      class="sc-htpNat sc-bxivhb hCstwL"
    >
      <div>
        Widget
      </div>
    </div>
  </div>
</DocumentFragment>
`;
